# bayhac2014

./: .gitignore  .hgignore  Main.html  README.md  bayhac2014-cryptmail.cabal
contrib/: Setup.hs  hello-bayhac-ffi.hs  hello-bayhac-ffi.html  hello-bayhac.hs  hello-bayhac.html  hello-world-ffi.html  hello-world.hs
lib/: bayhac2014-cryptmail.js  sjcl.js
slides/: README  index.html  main.css  main.md
src/: Client.hs  Server.hs
src/BayHac2014/Cryptmail/: ByteString.hs  Json.hs  PasswordEncryption.hs  ServiceApi.hs  Text.hs
src/BayHac2014/Cryptmail/Json/: Decode.hs  Encode.hs  Instances.hs  Types.hs
test/: Test.hs
