-- ------------------------------------------------------ --
-- Copyright © 2014 AlephCloud Systems, Inc.
-- ------------------------------------------------------ --

Name:                bayhac2014-cryptmail
Version:             0.0.1
Description:
    An application for sending encrypted email from a browser.
    This is an example application for a talk at BayHac 2014
    on web frontend development with Haste.

Homepage:            http://github.com/alephcloud/bayhac2014-cryptmail
License:             MIT
License-file:        LICENSE
Author:              Lars Kuhtz <lars@alephcloud.com>
Maintainer:          Lars Kuhtz <lars@alephcloud.com>
Copyright:           Copyright (c) 2014 AlephCloud Systems, Inc.
Category:            Haste, Cryptography, Web
Build-type:          Simple
Cabal-version:       >= 1.18

source-repository head
    type:     git
    location: http://github.com/alephcloud/bayhac2014-cryptmail

Flag haste
    description: build with haste-compiler
    default: False

Library
    default-language: Haskell2010
    hs-source-dirs: src

    other-modules:
        BayHac2014.Cryptmail.Json.Encode
        BayHac2014.Cryptmail.Json.Decode
        BayHac2014.Cryptmail.Json.Instances

    exposed-modules:
        BayHac2014.Cryptmail.Text
        BayHac2014.Cryptmail.ByteString
        BayHac2014.Cryptmail.PasswordEncryption
        BayHac2014.Cryptmail.ServiceApi
        BayHac2014.Cryptmail.Json

    build-depends:
        base == 4.*,
        base-unicode-symbols >= 0.2.2.4,
        transformers >= 0.3.0.0,
        containers >= 0.5.0.0

    if flag(haste)
        build-depends:
            haste-lib >= 0.1
    else
        build-depends:
            QuickCheck >= 2.7.3,
            base64-bytestring >= 1.0.0.1,
            bytestring >= 0.10.0.2,
            cipher-aes >= 0.2.7,
            crypto-random >= 0.0.7,
            cryptohash >= 0.11.4,
            text >= 1.1.0.1,
            quickcheck-instances >= 0.3.8,
            pbkdf >= 1.1.1.1,
            scotty >= 0.7.2,
            cabal-test-quickcheck >= 0.1.1,
            attoparsec >= 0.10.4.0,
            aeson >= 0.7.0.3,
            unordered-containers >= 0.2.3.3,
            vector >= 0.10.9.1

    ghc-options: -Wall

Executable cryptmail-client
    default-language: Haskell2010
    Main-Is: src/Client.hs
    hs-source-dirs: .

    if !flag(haste)
        buildable: False

    if flag(haste)
        build-depends:
            base == 4.*,
            bayhac2014-cryptmail,
            base-unicode-symbols >= 0.2.2.4,
            haste-lib >= 0.1

    ghc-options: -Wall --start=asap --with-js=lib/sjcl.js,lib/bayhac2014-cryptmail.js

Executable cryptmail-server
    default-language: Haskell2010
    Main-Is: src/Server.hs
    hs-source-dirs: .

    if flag(haste)
        buildable: False

    if ! flag(haste)
        build-depends:
            base == 4.*,
            scotty >= 0.7.2,
            bayhac2014-cryptmail,
            base-unicode-symbols >= 0.2.2.4,
            transformers >= 0.3.0.0,
            text >= 1.1.0.1

    ghc-options: -Wall

Test-Suite cryptmail-tests
    default-language: Haskell2010
    type: detailed-0.9
    test-module: Test
    hs-source-dirs: test

    if flag(haste)
        buildable: False

    build-depends:
        base == 4.*,
        bayhac2014-cryptmail,
        cabal-test-quickcheck >= 0.1.1,
        Cabal >= 1.20.0.0

